add aggregates sample result class